# bazel_proto_toolchain_error

./: .bazelproject  .bazelrc  .gitignore  WORKSPACE
protobuf/tensorflow/core/example/: BUILD.bazel  example.proto  feature.proto
toolchains/: BUILD.bazel
tools/build_rules/: definitely.bzl  version_check.bzl
tools/dependencies/: jvm_dependencies.yaml
